--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "polymer-cli": "^1.9.8",
     "serve": "^11.0.0",
+    "workbox-build": "^4.3.1",
     "workbox-cli": "^4.3.1"
   },
   "dependencies": {
