--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "json-server": "^0.14.2",
     "polymer-cli": "^1.9.8",
     "serve": "^11.0.0",
     "workbox-build": "^4.3.1",
