--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "js/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm i && workbox generateSW workbox-config.js && json-server --watch db/db.json --port 8888",
+    "serve": "polymer serve",
     "generate": "workbox generateSW workbox-config.js"
   },
   "author": "",
